---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 25.10.2024
  Bugfixes:
    - Fix rare case where radar might break if multiple radars are placed in grid.
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 25.10.2024
  Features:
    - Add Radar Equipment