@@ -8,4 +8,4 @@ radar-equipment=Radar Equipment
 radar-equipment=Radar Equipment
 
 [equipment-description]
-radar-equipment=Adds radar coverage. Mutliple radars have no effect.
+radar-equipment=Adds radar coverage. Mutliple radars have no effect. Consumes 30kW.
