@@ -66,10 +66,11 @@ data:extend{
     {
       type = "electric",
       buffer_capacity = "180kJ",
+      drain = "30kW",
       input_flow_limit = "240kW",
-      usage_priority = "secondary-input"
+      usage_priority = "secondary-input",
     },
-    energy_input = "30kW",
+    energy_input = "1W",
     categories = {"armor"},
     darkness_to_turn_on = 1,
     color_lookup = {{1, "identity"}},
