@@ -3,6 +3,7 @@ Version: 0.1.1
 Date: 25.10.2024
   Bugfixes:
     - Fix rare case where radar might break if multiple radars are placed in grid.
+    - Fix equipment power drain only happening at night.
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 25.10.2024
